Another possible ios navigation alignment fix

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -41,7 +41,6 @@
         flex-direction: column;
         align-items: center;
         top: 4vh;
-        /* right: 4vh; */
         width: 100vw;
         
         -webkit-user-select: none;
@@ -54,7 +53,6 @@
         height: 32px;
         position: absolute;
         top: -7px;
-        /* right: -5px; */
         
         cursor: pointer;
         
@@ -72,14 +70,6 @@
         
         background: lawngreen;
         border-radius: 3px;
-        
-        z-index: 1;
-        
-        transform-origin: 4px 0px;
-        
-        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                    opacity 0.55s ease;
     }
 
     .navMobile input:checked ~ nav {
@@ -111,8 +101,6 @@
         font-size: calc(2em + 1vw);
         font-family: 'Share Tech Mono', monospace;
         padding: 1%;
-        /* padding-left: 12.5vw;
-        padding-right: 12.5vw; */
         border: none;
         color: lawngreen;
     }
